// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 1`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_9
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
      <div
        class="flex flex-row space-x-6 items-center pt-16"
      >
        <div
          class=""
        >
          <svg
            class="icon-x-large "
            height="48"
            viewBox="0 0 48 48"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="48"
              width="48"
            />
            <path
              class="rgba-038-fill"
              d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
            />
          </svg>
        </div>
        <div>
          external_access.emergency_note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 2`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_9
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
      <div
        class="flex flex-row space-x-6 items-center pt-16"
      >
        <div
          class=""
        >
          <svg
            class="icon-x-large "
            height="48"
            viewBox="0 0 48 48"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="48"
              width="48"
            />
            <path
              class="rgba-038-fill"
              d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
            />
          </svg>
        </div>
        <div>
          external_access.emergency_note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 3`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_13
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center space-x-2"
              >
                <div>
                  common.continue
                </div>
              </div>
            </button>
          </div>
        </div>
      </form>
      <div
        class="flex flex-row space-x-6 items-center pt-16"
      >
        <div
          class=""
        >
          <svg
            class="icon-x-large "
            height="48"
            viewBox="0 0 48 48"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="48"
              width="48"
            />
            <path
              class="rgba-038-fill"
              d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
            />
          </svg>
        </div>
        <div>
          external_access.emergency_note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 4`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_8
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="disabled xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto loading"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center"
              >
                <div
                  class="flex flex-col space-y-4 items-center justify-center undefined"
                >
                  <div>
                    <div
                      class=""
                    >
                      <svg
                        class="spinner icon-large-40 "
                        viewBox="0 0 40 40"
                      >
                        <circle
                          class="path"
                          cx="20"
                          cy="20"
                          fill="none"
                          r="16"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </button>
          </div>
        </div>
      </form>
      <div
        class="flex flex-row space-x-6 items-center pt-16"
      >
        <div
          class=""
        >
          <svg
            class="icon-x-large "
            height="48"
            viewBox="0 0 48 48"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="48"
              width="48"
            />
            <path
              class="rgba-038-fill"
              d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
            />
          </svg>
        </div>
        <div>
          external_access.emergency_note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 5`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_3
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="disabled xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto loading"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center"
              >
                <div
                  class="flex flex-col space-y-4 items-center justify-center undefined"
                >
                  <div>
                    <div
                      class=""
                    >
                      <svg
                        class="spinner icon-large-40 "
                        viewBox="0 0 40 40"
                      >
                        <circle
                          class="path"
                          cx="20"
                          cy="20"
                          fill="none"
                          r="16"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 6`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_5
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="disabled xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto loading"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center"
              >
                <div
                  class="flex flex-col space-y-4 items-center justify-center undefined"
                >
                  <div>
                    <div
                      class=""
                    >
                      <svg
                        class="spinner icon-large-40 "
                        viewBox="0 0 40 40"
                      >
                        <circle
                          class="path"
                          cx="20"
                          cy="20"
                          fill="none"
                          r="16"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 7`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_4
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="disabled xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto loading"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center"
              >
                <div
                  class="flex flex-col space-y-4 items-center justify-center undefined"
                >
                  <div>
                    <div
                      class=""
                    >
                      <svg
                        class="spinner icon-large-40 "
                        viewBox="0 0 40 40"
                      >
                        <circle
                          class="path"
                          cx="20"
                          cy="20"
                          fill="none"
                          r="16"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExternalUserVerificationCode tests renders ExternalUserVerificationCode not-verified 8`] = `
<DocumentFragment>
  <div
    class="md:px-12 xl:px-48"
  >
    <div
      class="md:whitespace-pre md:h-24 my-1 md:pb-10 w-full items-center"
    >
      <h4>
        external_access.title_2
      </h4>
    </div>
    <div
      class="pt-10 pb-6 xl:pt-2 xl:pb-10"
    >
      external_access.verification_code_sent_description
    </div>
    <div>
      <form>
        <div
          class="pb-6"
        >
          <div
            class="flex flex-col h-20 input-group"
          >
            <div
              class="input-group-container flex flex-wrap items-stretch w-full relative  w-full md:w-88"
            >
              <input
                autocomplete="off"
                class=" pt-6 body2 h-14 flex-shrink flex-grow flex-auto leading-normal w-px flex-1 input-date-mask pl-4"
                data-test-id="code"
                data-testid="code"
                max="999999"
                maxlength="6"
                name="code"
                placeholder=""
                required=""
                type="number"
                value=""
              />
              <label
                class="absolute truncate required body2 "
              >
                external_access.six_digit_code
              </label>
            </div>
          </div>
        </div>
        <div
          class="pt-2 flex flex-col xl:flex-row pb-10 space-y-3 xl:space-y-0"
        >
          <div
            class="body2"
          >
            external_access.resend_verification_message
          </div>
          <div
            class="body2"
          >
            <a
              class="disabled xl:px-2"
            >
              external_access.resend_verification_cta
            </a>
          </div>
        </div>
        <div
          class="pb-2 flex justify-start"
        >
          <div>
            <button
              class="big-button w-full md:w-auto loading"
              data-test-id="mobile-phone-submit-button"
              disabled=""
              type="submit"
            >
              <div
                class="flex flex-row justify-center items-center"
              >
                <div
                  class="flex flex-col space-y-4 items-center justify-center undefined"
                >
                  <div>
                    <div
                      class=""
                    >
                      <svg
                        class="spinner icon-large-40 "
                        viewBox="0 0 40 40"
                      >
                        <circle
                          class="path"
                          cx="20"
                          cy="20"
                          fill="none"
                          r="16"
                          stroke-width="4"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div />
              </div>
            </button>
          </div>
        </div>
      </form>
      <div
        class="flex flex-row space-x-6 items-center pt-16"
      >
        <div
          class=""
        >
          <svg
            class="icon-x-large "
            height="48"
            viewBox="0 0 48 48"
            width="48"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="48"
              width="48"
            />
            <path
              class="rgba-038-fill"
              d="M38,6H10a3.982,3.982,0,0,0-3.98,4L6,38a4,4,0,0,0,4,4H38a4,4,0,0,0,4-4V10A4,4,0,0,0,38,6ZM36,28H28v8H20V28H12V20h8V12h8v8h8Z"
            />
          </svg>
        </div>
        <div>
          external_access.emergency_note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
